--- a/css/style.css
+++ b/css/style.css
@@ -1195,3 +1195,12 @@ div:after {
         background-color: #00838f;
     }
 }
+
+.pagination {
+	display: flex;
+	justify-content: center;
+}
+.pagination li {
+	padding: 0 5px;
+	margin: 0 5px;
+}
